--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>meipiao-dashboard</title>
+    <title>meipiao</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript">
-      if (!window.Promise) document.write('<script src="//github.elemecdn.com/jakearchibald/es6-promise/v3.0.2/dist/es6-promise.min.js"><\/script>');
-    </script>
   </body>
 </html>
