--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>美票</title>
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" type="text/css">
+    <link href="../static/visavail/css/visavail.css" rel="stylesheet" type="text/css">
+    <link href="../static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <script src="../static/vendors/moment/moment-with-locales.min.js" type="text/javascript"></script>
+    <script>
+    moment.locale("en");
+    </script>
+    <script src="../static/vendors/d3/d3.min.js" charset="utf-8"></script>
+    <script src="../static/visavail/js/visavail.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
