--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <script src="../static/vendors/moment/moment-with-locales.min.js" type="text/javascript"></script>
     <script>
-    moment.locale("en");
+    moment.locale("zh-cn");
     </script>
     <script src="../static/vendors/d3/d3.min.js" charset="utf-8"></script>
     <script src="../static/visavail/js/visavail.js"></script>
