--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <title>美票</title>
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" type="text/css">
-    <link href="../static/visavail/css/visavail.css" rel="stylesheet" type="text/css">
-    <link href="../static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href=<%= htmlWebpackPlugin.options.path %>visavail/css/visavail.css rel="stylesheet" type="text/css">
+    <link href=<%= htmlWebpackPlugin.options.path %>vendors/font-awesome/css/font-awesome.min.css rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <script src="../static/vendors/moment/moment-with-locales.min.js" type="text/javascript"></script>
+    <script src=<%= htmlWebpackPlugin.options.path %>vendors/moment/moment-with-locales.min.js type="text/javascript"></script>
     <script>
-    moment.locale("zh-cn");
-    </script>
-    <script src="../static/vendors/d3/d3.min.js" charset="utf-8"></script>
-    <script src="../static/visavail/js/visavail.js"></script>
+    moment.locale('zh-cn')
+</script>
+    <script src=<%= htmlWebpackPlugin.options.path %>vendors/d3/d3.min.js charset="utf-8"></script>
+    <script src=<%= htmlWebpackPlugin.options.path %>visavail/js/visavail.js></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
