--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <script src=<%= htmlWebpackPlugin.options.path %>vendors/moment/moment-with-locales.min.js type="text/javascript"></script>
+
+    <script src=<%= htmlWebpackPlugin.options.path %>vendors/jquery.slim.min.js ></script>
+    <script src=<%= htmlWebpackPlugin.options.path %>vendors/moment-with-locales.min.js ></script>
     <script>
     moment.locale('zh-cn')
 </script>
-    <script src=<%= htmlWebpackPlugin.options.path %>vendors/d3/d3.min.js charset="utf-8"></script>
+    <script src=<%= htmlWebpackPlugin.options.path %>vendors/d3.min.js ></script>
     <script src=<%= htmlWebpackPlugin.options.path %>visavail/js/visavail.js></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
