--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-store, must-revalidate">
+  <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT">
+  <meta http-equiv="expires" content="0">
     <title>美票</title>
     <link href=<%= htmlWebpackPlugin.options.path %>visavail/css/visavail.css rel="stylesheet" type="text/css">
     <link href=<%= htmlWebpackPlugin.options.path %>vendors/font-awesome/css/font-awesome.min.css rel="stylesheet" type="text/css">
