--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </script>
     <script src=<%= htmlWebpackPlugin.options.path %>vendors/d3.min.js ></script>
     <script src=<%= htmlWebpackPlugin.options.path %>visavail/js/visavail.js></script>
+    <script src="http://code.jquery.com/jquery-1.4.1.js"></script>  
+    <script src="http://cdn.bootcss.com/blueimp-md5/1.1.0/js/md5.js"></script>  
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
