--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
   <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT">
   <meta http-equiv="expires" content="0">
     <title>美票</title>
-    <link href=<%= htmlWebpackPlugin.options.path %>visavail/css/visavail.css rel="stylesheet" type="text/css">
-    <link href=<%= htmlWebpackPlugin.options.path %>vendors/font-awesome/css/font-awesome.min.css rel="stylesheet" type="text/css">
+    <!-- <link href=<%= htmlWebpackPlugin.options.path %>visavail/css/visavail.css rel="stylesheet" type="text/css">
+    <link href=<%= htmlWebpackPlugin.options.path %>vendors/font-awesome/css/font-awesome.min.css rel="stylesheet" type="text/css"> -->
 </head>
 
 <body>
-    <script src=<%= htmlWebpackPlugin.options.path %>vendors/jquery.slim.min.js ></script>
+    <!-- <script src=<%= htmlWebpackPlugin.options.path %>vendors/jquery.slim.min.js ></script>
     <script src=<%= htmlWebpackPlugin.options.path %>vendors/moment-with-locales.min.js ></script>
     <script>
-    moment.locale('zh-cn')
-</script>
+        moment.locale('zh-cn')
+    </script>
     <script src=<%= htmlWebpackPlugin.options.path %>vendors/d3.min.js ></script>
     <script src=<%= htmlWebpackPlugin.options.path %>visavail/js/visavail.js></script>
     <script src="http://code.jquery.com/jquery-1.4.1.js"></script>  
-    <script src="http://cdn.bootcss.com/blueimp-md5/1.1.0/js/md5.js"></script>  
+    <script src="http://cdn.bootcss.com/blueimp-md5/1.1.0/js/md5.js"></script>-->
+    <script src=<%= htmlWebpackPlugin.options.path %>tinymce/tinymce.min.js></script>   
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
